syntax = "proto3";

package com.icthh.xm.gate.security.oauth2.dto;

message OAuth2AuthorizationRequestDto {
    string authorizationUri = 1;
    string clientId = 2;
    string redirectUri = 3;
    repeated string scopes = 4;
    string state = 5;
    map<string, string> additionalParameters = 6;
    string authorizationRequestUri = 7;
    map<string, string> attributes = 8;
}
